--- a/compile.cfg
+++ b/compile.cfg
@@ -1,6 +1,6 @@
 [View]
-Entity=alu
-Architecture=Behavior
+Entity=cpu
+Architecture=structure
 TopLevelType=1
 [file:.\src\alu.vhd]
 Enabled=1
@@ -17,4 +17,8 @@ Enabled=1
 [file:.\src\tristatebuffer.vhd]
 Enabled=1
 [file:.\src\ctrl.vhd]
+Enabled=1
+[file:.\src\cpu.vhd]
+Enabled=1
+[file:.\src\computer.vhd]
 Enabled=1
