--- a/compile.cfg
+++ b/compile.cfg
@@ -22,3 +22,15 @@ Enabled=1
 Enabled=1
 [file:.\src\computer.vhd]
 Enabled=1
+[file:.\src\simulation.asdb]
+Enabled=1
+[file:.\src\simulation.awc]
+Enabled=1
+[file:.\src\test.asdb]
+Enabled=1
+[file:.\src\test.awc]
+Enabled=1
+[file:.\src\working.asdb]
+Enabled=1
+[file:.\src\working.awc]
+Enabled=1
